--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-users fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">
               <span class="spanish">Trabajo en equipo</span>
@@ -112,7 +112,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-cogs fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">
               <span class="spanish">Adaptabilidad</span>
@@ -123,7 +123,7 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+              <i class="fas fa-book fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">
               <span class="spanish">Autoaprendizaje</span>
@@ -140,8 +140,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">
+              <span class="spanish">Portafolio</span>
+              <span class="english">Portfolio</span>
+            </h2>
+            <h3 class="section-subheading text-muted">
+              <span class="spanish">Mis proyectos</span>
+              <span class="english">My projects</span>
+            </h3>
           </div>
         </div>
         <div class="row">
@@ -156,7 +162,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Datadashboard</h4>
-              <p class="text-muted">Illustration</p>
+              <p class="text-muted">API, AJAX</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -170,7 +176,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>Toovida</h4>
-              <p class="text-muted">Graphic Design</p>
+              <p class="text-muted">Google Maps API, Firebase, Promises</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -184,7 +190,7 @@
             </a>
             <div class="portfolio-caption">
               <h4>FoodMap</h4>
-              <p class="text-muted">Identity</p>
+              <p class="text-muted">Google Maps API, Bootstrap</p>
             </div>
           </div>
         </div>
@@ -196,8 +202,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About Me</h2>
-            <h3 class="section-subheading text-muted">How do I fall in love with code?</h3>
+            <h2 class="section-heading text-uppercase">
+              <span class="spanish">Sobre mí</span>
+              <span class="english">About Me</span>
+            </h2>
+            <h3 class="section-subheading text-muted">
+              <span class="spanish">¿Cómo empezó mi pasión por el código?</span>
+              <span class="english">How do I fall in love with code?</span>
+            </h3>
           </div>
         </div>
         <div class="row">
@@ -296,7 +308,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">My achievements</h2>
+            <h2 class="section-heading text-uppercase">
+              <span class="spanish">Mis logros</span>
+              <span class="english">My achievements</span>
+            </h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -454,7 +469,10 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/fiorella-effio-saldivar/" target="_blank">
+                <a class="spanish" href="https://www.linkedin.com/in/fiorella-effio-saldivar/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a class="english" href="https://www.linkedin.com/in/fiorella-effio-saldivar/?locale=en_US" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
