--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <div class="navbar-brand js-scroll-trigger">
-          <a href="#page-top">Fiorella Effio</a>
-          <input type="checkbox" id="toogle" /><label for="toogle"></label>
+          <a href="#page-top" id="myName">Fiorella Effio</a>
+          <input type="checkbox" id="toogle" /><label for="toogle" id="seeToogle"></label>
         </div>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -341,14 +341,17 @@
               <span class="spanish">Mis logros</span>
               <span class="english">My achievements</span>
             </h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Self-learning</h4>
+              <h4>
+                <span class="spanish">Autoaprendizaje</span>
+                <span class="english">Self-learning</span>
+              </h4>
               <p class="text-muted">Laboratoria</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -362,7 +365,10 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Hackaton participant</h4>
+              <h4>
+                <span class="spanish">Participante Hackaton</span>
+                <span class="english">Hackaton participant</span>
+              </h4>
               <p class="text-muted">La Positiva</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -381,7 +387,10 @@
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Winner at PeruRumboGSoC2018</h4>
+              <h4>
+                <span class="spanish">Ganadora PeruRumboGSoC2018</span>
+                <span class="english">Winner at PeruRumboGSoC2018</span>
+              </h4>
               <p class="text-muted">LinuXatUNI</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
@@ -400,7 +409,10 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <p class="large text-muted">
+              <span class="spanish">Los links tienen detalles de los eventos realizados y los post también.</span>
+              <span class="english">Those links have details from the events and also have the posts for each event.</span>
+            </p>
           </div>
         </div>
       </div>
